# homework_01

./: .gitignore  Project1.sln
Project1/: CMakeLists.txt  FINAL_GUIDE.md  Project1.sln  Project1.vcxproj  README.md  SUMMARY.md  TROUBLESHOOTING.md  USAGE.md  build.sh  custom_cv.cpp  custom_cv_enhanced.cpp  custom_cv_enhanced.h  main.cpp  main_corrected.cpp  main_optimized.cpp  main_simple_test.cpp  main_with_enhanced.cpp  test_corrections.cpp  test_enhanced_harris.cpp  test_rotated_corners.cpp  test_specific_angles.cpp  test_updated_main.cpp
Project1/Project1/: Project1.vcxproj  Project1.vcxproj.filters  analysis_test.cpp  create_test_images.cpp  custom_cv.cpp  custom_cv.h  final_comparison.cpp  main.cpp  main_updated.cpp
Project1/Project1/x64/Debug/: Project1.exe.recipe
Project1/x64/Debug/: Project1.exe.recipe
Project1/x64/Debug/images/: shapes1.xcf
Project2/: Project2.sln
Project2/Project2/: Project2.sln  Project2.vcxproj  main.cpp  main.h
Project3/: Project3.sln
Project3/Project3/: Project3.sln  Project3.vcxproj  main.cpp  main.h
Project4/: CMakeLists.txt  Project4.sln  Project4.vcxproj  Project4.vcxproj.filters  README.md  build.sh  demo  demo_face_detection.cpp  face_matcher  face_matcher.cpp  face_matcher.h  main.cpp  ml_face_matcher.cpp  ml_face_matcher.h  test_cascade  test_cascade.cpp  test_feature  test_feature_matching.cpp  test_video  test_video.cpp
Project4/Project4/x64/Debug/: Project4.exe.recipe
